chore: push local changes

--- a/_config.yml
+++ b/_config.yml
@@ -2,7 +2,7 @@
 page_title: # Automatically populates with app name if not set and if iOS app ID is set. Otherwise enter manually.
 
 # App Info
-ios_app_id: 6737122722 # Required. Enter iOS app ID to automatically populate name, price and icons (e.g. 718043190).
+ios_app_id: 6751507698 # Required. Enter iOS app ID to automatically populate name, price and icons (e.g. 718043190).
 ios_app_country: pl # Required outside USA. Enter 2 letter country code as in https://en.wikipedia.org/wiki/ISO_3166-1_alpha-2
 
 appstore_link: # Automatically populates if not set and if iOS app ID is set. Otherwise enter manually.
@@ -14,7 +14,7 @@ presskit_download_link:
 app_icon: assets/appicon.png # Automatically populates if not set and if iOS app ID is set.  Otherwise enter path to icon file manually.
 app_name: # Automatically populates if not set and if iOS app ID is set.  Otherwise enter manually.
 app_price: # Automatically populates if not set and if iOS app ID is set.  Otherwise enter manually.
-app_description: Personalized breathing for a peaceful mind.
+app_description: Personalized box breathing for a peaceful mind.
 
 enable_smart_app_banner: true # Set to true to show a smart app banner at top of page on mobile devices.
 
@@ -30,7 +30,7 @@ github_username: mateusz0909
 youtube_username:
 mastodon_link:
 
-# Feature List                            Edit, add or remove features to be presented.
+# Feature List
 features:
   - title: Customizable Breathing Sessions
     description: Personalize your breathwork with adjustable settings like breath count, retention time, and session rounds.
