--- a/_config.yml
+++ b/_config.yml
@@ -32,37 +32,53 @@ mastodon_link:
 
 # Feature List
 features:
-  - title: Customizable Breathing Sessions
-    description: Personalize your breathwork with adjustable settings like breath count, retention time, and session rounds.
-    fontawesome_icon_name: sliders-h
+  - title: Guided Box Breathing
+    description: Follow a proven four-step breathing cycle (inhale, hold, exhale, hold) with on-screen cues and customizable timings.
+    fontawesome_icon_name: calendar-check
 
-  - title: Soothing Voice Guidance
-    description: Experience real-time voice guidance that gently leads you through each breath, keeping you focused and relaxed.
-    fontawesome_icon_name: headphones
+  - title: Haptic & Audio Feedback
+    description: Feel each breath with gentle haptic pulses and optional nature or music soundtracks for deeper immersion.
+    fontawesome_icon_name: heartbeat
 
-  - title: Natural Breath Sounds
-    description: Immerse yourself in calming, natural breath sounds designed to help you stay present and relaxed during each session.
-    fontawesome_icon_name: volume-up
+  - title: Custom Session Templates
+    description: Save your favorite session settings—breath counts, hold durations, and audio mix—for one-tap repeatability.
+    fontawesome_icon_name: save
 
-  - title: Visual Breathing Cues
-    description: Follow along with intuitive visual cues to synchronize your breath, making the experience even smoother.
-    fontawesome_icon_name: eye
+  - title: Apple Watch Sync
+    description: Bring guided breathing on your wrist—start, pause, and track sessions right from your Apple Watch.
+    fontawesome_icon_name: watch
 
-  - title: Session Summary & Progress Tracking
-    description: Review detailed session summaries and track your progress over time to stay motivated and improve your breathwork practice.
-    fontawesome_icon_name: chart-line
+  - title: HealthKit Integration
+    description: Log sessions automatically in HealthKit to track mindful minutes and view breathing metrics alongside other health data.
+    fontawesome_icon_name: apple
 
-  - title: Stress Relief & Relaxation
-    description: Reduce stress and anxiety by practicing scientifically-backed breathwork techniques designed for calm and focus.
-    fontawesome_icon_name: smile
+  - title: Daily Reminders & Streaks
+    description: Set custom notifications to build a consistent practice and earn streak badges as motivation.
+    fontawesome_icon_name: bell
 
-  - title: Offline Mode
-    description: No internet? No problem. Luma works offline, so you can breathe deeply anywhere, anytime.
-    fontawesome_icon_name: tree
+  - title: Dark & Light Themes
+    description: Match your mood or system appearance with beautiful light and dark color schemes for distraction-free sessions.
+    fontawesome_icon_name: adjust
 
-  - title: Quick Start Breathing Sessions
-    description: Start your session in seconds with just a tap. Luma makes breathwork easy and accessible, even on busy days.
-    fontawesome_icon_name: play
+  - title: Favorites & Quick Launch
+    description: Bookmark your go-to sessions for instant access from the home screen or widget.
+    fontawesome_icon_name: star
+
+  - title: Sleep & Relaxation Mode
+    description: Wind down with extended exhale emphasis, soothing background audio, and gentle screen dimming for bedtime routines.
+    fontawesome_icon_name: moon
+
+  - title: Multi-Voice Narration
+    description: Choose from diverse guided voice packs—male, female, whisper, or nature ambient narrators—for a personalized experience.
+    fontawesome_icon_name: users
+
+  - title: Offline & Low-Connectivity Support
+    description: All core breathing sessions and premium audio tracks are stored on device for uninterrupted practice anywhere.
+    fontawesome_icon_name: wifi-slash
+
+  - title: Progress Dashboard
+    description: Visualize weekly and monthly trends in session frequency, duration, and breathing consistency to stay on track.
+    fontawesome_icon_name: chart-
 
 # Theme Settings
 topbar_color: "#000000"
